random selection of subtopics to generate posts
